Creado controladores y endpoints de swagger
